--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "react-workflow-gh-actions",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dyarleniber.github.io/react-workflow-gh-actions",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
