--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Cache dependencies
+	    uses: actions/cache@v2
+	    with:
+        path: **/node_modules
+	      key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+
     - name: Install dependencies
       run: npm install
 
