--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Cache dependencies
-	    uses: actions/cache@v2
-	    with:
-        path: **/node_modules
-	      key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+      uses: actions/cache@v2
+      with:
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
     - name: Install dependencies
       run: npm install
